--- a/index.html
+++ b/index.html
@@ -54,23 +54,13 @@
     <div class="tooltip-box" id="tooltip">Passa il mouse su un cerchio</div>
   </div>
 
-  <!--metto in questo script i dati, le funzioni di scaling, visualizzazione e quella di updateCircles che implementa la transizione-->
+  <!--metto in questo script il riferimento ai dati, le funzioni di scaling, visualizzazione e quella di updateCircles che implementa la transizione-->
   <!--per quanto riguarda lo scaling ho deciso di far partire entrambi gli assi da zero, e di farli arrivare al valore massimo presente tra i dati, esempio: d3.max(data, d => d.v1)-->
   <!--scaleSqrt() per fare scaling in modo che l'area sia proporzionale-->
   <script>
-    const data = [
-      {id: 1, v1: 10, v2: 20, v3: 30, v4: 50},
-      {id: 2, v1: 40, v2: 90, v3: 25, v4: 45},
-      {id: 3, v1: 60, v2: 40, v3: 40, v4: 60},
-      {id: 4, v1: 20, v2: 60, v3: 15, v4: 35},
-      {id: 5, v1: 80, v2: 70, v3: 50, v4: 70},
-      {id: 6, v1: 30, v2: 30, v3: 35, v4: 55},
-      {id: 7, v1: 70, v2: 50, v3: 45, v4: 65},
-      {id: 8, v1: 50, v2: 10, v3: 20, v4: 40},
-      {id: 9, v1: 90, v2: 80, v3: 60, v4: 30},
-      {id: 10, v1: 15, v2: 35, v3: 60, v4: 10},
-    ];
-
+  //qui sotto la modifica
+  //uso d3.json per importare i dati dal file json creato
+  d3.json("data.json").then(data => {
     const svg = d3.select("svg");
     const width = +svg.attr("width");
     const height = +svg.attr("height");
@@ -81,7 +71,6 @@
 
     const g = svg.append("g").attr("transform", `translate(${margin.left},${margin.top})`);
 
-    //funzioni di scaling
     const xScale = d3.scaleLinear()
       .domain([0, d3.max(data, d => d.v1)])
       .range([0, innerWidth]);
@@ -90,11 +79,10 @@
       .domain([0, d3.max(data, d => d.v2)])
       .range([innerHeight, 0]);
 
-    const rScale = d3.scaleSqrt()
-      .range([5, 40]);
+    const rScale = d3.scaleSqrt().range([5, 40]);
 
-    const xAxis = d3.axisBottom(xScale).ticks(9).tickFormat(d => `${d}`);
-    const yAxis = d3.axisLeft(yScale).ticks(9).tickFormat(d => `${d}`);
+    const xAxis = d3.axisBottom(xScale).ticks(9);
+    const yAxis = d3.axisLeft(yScale).ticks(9);
 
     g.append("g")
       .attr("transform", `translate(0,${innerHeight})`)
@@ -117,35 +105,28 @@
       .text("Variabile v2 (y)");
 
     let useV3 = true;
-
     const toggleButton = document.querySelector("button.toggle");
+    const tooltip = document.getElementById("tooltip");
+
     toggleButton.addEventListener("click", () => {
       useV3 = !useV3;
       toggleButton.textContent = useV3 ? "Visualizzo la terza variabile" : "Visualizzo la quarta variabile";
       updateCircles();
     });
 
-    const tooltip = document.getElementById("tooltip");
-
-    // aggiungo una griglia orizzontale
-    const yGrid = g.append("g")
+    g.append("g")
       .attr("class", "grid")
-      .call(d3.axisLeft(yScale)
-        .tickSize(-innerWidth)
-        .tickFormat(""))
-      .call(g => g.select(".domain").remove()) // rimuovo la linea asse Y più marcata in alto che non mi piace
+      .call(d3.axisLeft(yScale).tickSize(-innerWidth).tickFormat(""))
+      .call(g => g.select(".domain").remove())
       .selectAll("line")
       .attr("stroke", "#ccc")
       .attr("stroke-dasharray", "3,3");
 
-    // aggiungo una griglia verticale
-    const xGrid = g.append("g")
+    g.append("g")
       .attr("class", "grid")
       .attr("transform", `translate(0,${innerHeight})`)
-      .call(d3.axisBottom(xScale)
-        .tickSize(-innerHeight)
-        .tickFormat(""))
-      .call(g => g.select(".domain").remove()) // rimuovo la linea asse X più marcata a destra
+      .call(d3.axisBottom(xScale).tickSize(-innerHeight).tickFormat(""))
+      .call(g => g.select(".domain").remove())
       .selectAll("line")
       .attr("stroke", "#ccc")
       .attr("stroke-dasharray", "3,3");
@@ -171,7 +152,6 @@
         tooltip.innerHTML = "Passa il mouse su un cerchio per scoprire i dettagli";
       });
 
-    //funzione che implementa la transizione graduale tra le visualizzazioni
     function updateCircles() {
       const radiusVar = useV3 ? "v3" : "v4";
       rScale.domain(d3.extent(data, d => d[radiusVar]));
@@ -181,6 +161,8 @@
     }
 
     updateCircles();
-  </script>
+  });
+</script>
+
 </body>
 </html>
